fixed image stretching

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -139,6 +139,15 @@ i {
     text-align: center;
     border-radius: 5%;
     padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-img-top img{
+    max-height:90%;
+    max-width: 90%;
+    border-radius: 5%;
 }
 
 .card-img-left, .card-img-right {
